@@ -3,6 +3,11 @@
     * Fix a bug that IO::Socket::INET does not call DESTROY method in IO::Socket.
     * Fix a bug that IO::Socket::INET6 does not call DESTROY method in IO::Socket.
     * Fix a bug that IO::Socket::UNIX does not call DESTROY method in IO::Socket.
+  [Incompatible Changes]
+    * The default value of LocalPort option becomes 0.
+    * The default value of PeerPort option becomes 0.
+  [Document Improvement]
+    * Improve docs for IO::Socekt::IP.
     
 0.223 2023-10-11
   [Test Improvement]
